--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
          ================================================== */
          .todo {
          position: relative;
-         width: 260px;
+         
          padding: 12px 0;
          background: #fff;
          border: 1px solid;
@@ -197,7 +197,7 @@
          margin: 0 15px 12px 50px;
          height: 12px;
          }
-         .todo-controls li { float: left }
+         .todo-controls li { float: right }
          .todo-controls li + li { margin-left: 10px }
          .todo-controls .right { float: right }
          .todo-controls a {
@@ -233,38 +233,29 @@
          padding: 0 4px;
          opacity: .3;
          }
-         /* ========================================================
-         About
-         =====================================================
-         ================================================== */
-         .about {
-         margin: 80px auto 50px;
-         padding: 15px 20px;
-         width: 300px;
-         text-align: center;
-         color: #777;
-         text-shadow: 0 1px rgba(255, 255, 255, 0.7);
-         background: rgba(0, 0, 0, 0.05);
-         border-radius: 3px;
+		  .red-anchor{
+			  color:red;
+			  text-decoration: underline;
+			  
+		  }
+		  
+		  .fload-right{
+			  float:right;		  
+		  }
+		  
+		  .about :hover {
+         color: red;
+         
          }
-         .about a {
-         padding: 1px 3px;
-         margin: 0 -1px;
-         color: #1c74c8;
-         text-decoration: none;
-         border-radius: 2px;
-         }
-         .about a:hover {
-         color: #fff;
-         text-shadow: 0 1px #0063A6;
-         background: #0090D2;
-         }
+        
          .glyphicon-remove-circle{
          color:red;
+			 float:right;
          }
          .glyphicon-remove-circle:hover{
          color:red;
          font-size: 2em;
+			float:right;
          }
          .glyphicon-ok-circle{
          color:green;
@@ -291,6 +282,17 @@
          width: 50%;
          font-size: 14px;
          }
+		  .complete-date{
+			  color: green;
+		  }
+		  .deadline-date{
+			  color:red;
+		  }
+		  hr.type_5 {
+			  	border-top: 3px double #8c8b8b;
+
+
+}
       </style>
       <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
       <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
@@ -373,7 +375,13 @@
       </div>
    </body>
    <script type="text/babel">
-      var ToDoForm = React.createClass({  
+      var ToDoForm = React.createClass({ 
+	  
+	   componentWillMount: function() {
+      this.getTasks();
+	  
+   },
+
       
       getInitialState:function() {
          return {
@@ -386,14 +394,17 @@
       
       addTasks: function(e){
       	var smpl=this.state.task;
+		console.log(this.deadline.value);
       	smpl.push({text: this._inputElement.value,
-           key: Date.now()});
+           key: Date.now(),
+		   deadline: this.deadline.value});
         fetch('tasks', {
          method: 'post',
          headers: {'Content-Type': 'application/json'},
          body: JSON.stringify({
            'text': this._inputElement.value,
-           'key': Date.now()
+           'key': Date.now(),
+		   'deadline':this.deadline.value
          })
        })
        .then(response => {
@@ -409,7 +420,8 @@
        });
 	   setTimeout(function() {
     element.style.display = "none";
-  }, 5000); 
+  }, 5000);
+  this.getTasks();
        })
       	
        this.setState({
@@ -485,27 +497,36 @@
       //this.CgetTasks();
       return (
       	<div>
-		{this.getTasks()}
+		{this.getTasks}
 		
-      	<div className="col-md-12 col-xs-6">
+		
+      	<div className="col-md-9 col-xs-12">
       	<form>
       	<div className="form-group">
       	<h4>What do you want to do today?</h4>
              <input type="text" ref={(a) => this._inputElement = a} className="form-control" placeholder="ex- buy new smartphone for friend">
                    </input>
       		  </div>
+			  
+		<div className="form-group">
+      	<h4>Expected Task Completion Date</h4>
+             <input type="date" ref={(b) => this.deadline = b} className="form-control" >
+                   </input>
+      		  </div>
       		  
       		  <button type="button" className= "btn btn-success" onClick={this.addTasks}>Add Now</button>
-      	<div style={{display: 'none'}} id='id' className="alert alert-success"> <h6>{this.state.result}</h6></div>
-      	
       	</form>
       	</div>
-      		<div className="col-md-6 col-xs-6">
-      	   <ToDoList tasks={this.state.taskDetails}> </ToDoList>
+		<div className="col-md-3 col-xs-12">
+	
+		<div style={{display: 'none'}} id='id' className="alert alert-success"> <h6>{this.state.result}</h6></div>
+	   </div>
+      		<div className="col-md-6 col-xs-12">
+      	   <ToDoList tasks={this.state.taskDetails} getTasks={this.getTasks}> </ToDoList>
       	   </div>
 		   
-		   <div className="col-md-6 col-xs-6">
-      	   <ToDoCList Ctasks={this.state.CtaskDetails}> </ToDoCList>
+		   <div className="col-md-6 col-xs-12">
+      	   <ToDoCList Ctasks={this.state.CtaskDetails} getTasks={this.getTasks}> </ToDoCList>
       	   </div>
 		  
       	
@@ -531,11 +552,29 @@
        .then(data => {
        //alert("task deleted");
        //console.log(this.state.taskDetails)
+	    this.props.getTasks();
        })
       
       },
 	  
-	  completeTasks: function(okey,text,sdate){
+	  deleteAllTasks: function(e){
+       //console.log(e);
+      fetch('deleteAllTasks', {
+         method: 'delete',
+         headers: {'Content-Type': 'application/json'}
+       })
+       .then(response => {
+         if (response.ok) return response.json()
+       })
+       .then(data => {
+       //alert("task deleted");
+       //console.log(this.state.taskDetails)
+	    this.props.getTasks();
+       })
+      
+      },
+	  
+	  completeTasks: function(okey,text,sdate,deadlineDate){
 	  
 	  fetch('completedTasks', {
          method: 'post',
@@ -544,7 +583,8 @@
 	  		'key':Date.now(),
            'oldKey': okey,
 		   'text':text,
-		   'sdate': sdate
+		   'sdate': sdate,
+		   'deadline':deadlineDate
          })
        })
        .then(response => {
@@ -553,6 +593,7 @@
        .then(data => {
        //alert("task deleted");
        //console.log(this.state.taskDetails)
+	   this.props.getTasks();
        })
 	  
 	  },
@@ -566,13 +607,20 @@
       	return(
       		<div>
       	<h4>Check Your To-Do List</h4>
-      		<section className="todo" id='sec'>	
+		<hr className="type_5"></hr>
+      		<section className="todo" id='sec'>
+			<ul className="todo-controls  ">
+		<li>
+	   <a className="red-anchor" href="#" onClick={this.deleteAllTasks}>Delete All</a>
+	   </li>
+	   </ul>
       		<ul className="todo-list">
       		{this.props.tasks.map((key) =>
       		<li className="done" key={key.key} >
-      		<h6><strong>{key.text} </strong> (<small>{key.sdate} </small>)</h6>
-      		<a className="glyphicon glyphicon-ok-circle" title="Done" onClick={this.completeTasks.bind(this,key.key,key.text,key.sdate)}></a>
-      		<a className="glyphicon glyphicon-remove-circle" onClick={this.deleteTasks.bind(this,key.key)} title="Delete it"></a>
+      		<h6><strong>{key.text} </strong> </h6>
+			<h6><strong className="deadline-date">Task Deadline <small className="deadline-date">: {key.deadline} </small> </strong><strong className="fload-right"> Task Creation Date<small>: {key.sdate} </small></strong></h6>
+      		<a className="glyphicon glyphicon-ok-circle" title="Done" onClick={this.completeTasks.bind(this,key.key,key.text,key.sdate,key.deadline)}></a>
+      		<a className="glyphicon glyphicon-remove-circle" onClick={this.deleteTasks.bind(this,key.key)} title="Delete it"></a> 
         </li> )}
         </ul>
       		</section>
@@ -603,26 +651,47 @@
        .then(data => {
        //alert("task deleted");
        //console.log(this.state.taskDetails)
+	   this.props.getTasks();
+       })
+      
+      },
+	  deleteAllCompletedTasks: function(e){
+       //console.log(e);
+      fetch('deleteAllCompletedTasks', {
+         method: 'delete',
+         headers: {'Content-Type': 'application/json'}
+       })
+       .then(response => {
+         if (response.ok) return response.json()
+       })
+       .then(data => {
+       //alert("task deleted");
+       //console.log(this.state.taskDetails)
+	   this.props.getTasks();
        })
       
       },
       render: function(){
-      			//console.log(this.props.Ctasks);
       		  var todoEntries = this.props.Ctasks;
-			  //console.log(todoEntries);
       		function createTasks(item) {
            return <li key={item.key}>{item.text}</li>
          }
       	var listItems = todoEntries.map(createTasks);
       	return(
       		<div>
-      	<h4><span className="glyphicon glyphicon-ok"></span> Check Your Completed Tasks</h4>
-		<section className="todo" id="csec">	
+      	<h4>Check Your Completed Tasks</h4>
+		<hr className="type_5"></hr>
+		<section className="todo" id="csec">
+		<ul className="todo-controls  ">
+		<li>
+	   <a className="red-anchor" href="#" onClick={this.deleteAllCompletedTasks}>Delete All</a>
+	   </li>
+	   </ul>
       		<ul className="todo-list">
       		{this.props.Ctasks.map((key) =>
       		<li className="done" key={key.key} >
       		<h5><strong><del>{key.text}</del></strong></h5>
-			<h6><small>Completed Date:{key.completedDate}</small> <a className="glyphicon glyphicon-remove" onClick={this.deleteCompletedTasks.bind(this,key.key)} title="Delete it"></a></h6>
+			<h6><strong className="complete-date">Completed Date:{key.completedDate}</strong><strong className="deadline-date fload-right">Deadline Date : {key.deadline} <a className="glyphicon glyphicon-remove" onClick={this.deleteCompletedTasks.bind(this,key.key)} title="Delete it"></a></strong>  </h6>
         </li> )}
         </ul>
       		</section>
