--- a/views/index.ejs
+++ b/views/index.ejs
@@ -293,6 +293,65 @@
 
 
 }
+		  .loader,
+.loader:before,
+.loader:after {
+  background: #ffffff;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader {
+  color: #ffffff;
+  text-indent: -9999em;
+  margin: 88px auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
       </style>
       <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
       <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
@@ -396,8 +455,10 @@
       	var smpl=this.state.task;
 		var loadScreen = document.getElementById('imgR');
 		var element = document.getElementById('sec');
+		var Belement = document.getElementById('asec')
 		element.style.display="none";
 		loadScreen.style.display="block";
+		loadScreen.style.display="none";
       	smpl.push({text: this._inputElement.value,
            key: Date.now(),
 		   deadline: this.deadline.value});
@@ -628,7 +689,7 @@
         </li> )}
         </ul>
       		</section>
-			<img src="http://preloaders.net/preloaders/287/Filling%20broken%20ring.gif" id="imgR" style={{display:'none'}}></img>
+			<div className="loader" id="imgR" style={{display:'none'}}>Loading.....</div>
 			<div className="alert alert-warning alert-dismissable" id="asec" style={{display:'none'}}>
     <a href="#" className="close" data-dismiss="alert" aria-label="close">×</a>
     <strong>Warning!</strong> You have not added anything..
