Changes made in index and server file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -815,7 +815,7 @@
        //console.log(e);
 	   var loadScreen = document.getElementById('loaderForCompleteTask');
 		var element = document.getElementById('csec');
-		//var Belement = document.getElementById('acsec')
+		var Belement = document.getElementById('acsec')
 		element.style.display="none";
 		loadScreen.style.display="block";
 		
